--- a/spamassassin/po/es/untangle-node-spamassassin.po
+++ b/spamassassin/po/es/untangle-node-spamassassin.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-10 11:22-0800\n"
-"PO-Revision-Date: 2008-11-24 15:49-0700\n"
+"PO-Revision-Date: 2008-11-25 05:54-0700\n"
 "Last-Translator: David Russi <dprussi@qwest.net>\n"
 "Language-Team: Spanish <dprussi@qwest.net>\n"
 "MIME-Version: 1.0\n"
@@ -25,7 +25,7 @@ msgstr "Marcar"
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:44
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:46
 msgid "Pass"
-msgstr "Pasar"
+msgstr "Permitir"
 
 #: ../hier/usr/share/untangle/web/webui/script/untangle-node-spamassassin/settings.js:45
 msgid "Block"
