--- a/uvm-lib/po/pt_BR/untangle-libuvm.po
+++ b/uvm-lib/po/pt_BR/untangle-libuvm.po
@@ -444,7 +444,7 @@ msgstr "Configurações"
 
 #: ../servlets/webui/root/script/components.js:960
 msgid "Buy Now"
-msgstr "Comprar agora"
+msgstr "Comprar"
 
 #: ../servlets/webui/root/script/components.js:1146
 msgid "Loading Settings..."
