--- a/gui/po/pt_BR/untangle-install-wizard.po
+++ b/gui/po/pt_BR/untangle-install-wizard.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-11-04 11:30-0800\n"
+"POT-Creation-Date: 2009-02-02 14:20-0800\n"
 "PO-Revision-Date: 2008-11-23 22:47-0800\n"
 "Last-Translator: Claudia\n"
 "Language-Team: Portuguese <claudia@englishtoportuguese.com>\n"
@@ -19,8 +19,11 @@ msgstr ""
 
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:77
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:312
-msgid "These tests show you if your computer meets minimum hardware requirements."
-msgstr "Esses testes mostram a você se o seu computador cumpre os requisitos mínimos de hardware."
+msgid ""
+"These tests show you if your computer meets minimum hardware requirements."
+msgstr ""
+"Esses testes mostram a você se o seu computador cumpre os requisitos mínimos "
+"de hardware."
 
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:78
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:325
@@ -66,6 +69,11 @@ msgstr "Intefaces de rede:"
 msgid "Checking..."
 msgstr "Verificando..."
 
+#: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:106
+#, fuzzy
+msgid "undetermined "
+msgstr "indeterminado"
+
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:107
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:108
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:109
@@ -103,16 +111,38 @@ msgid "{0} interface"
 msgstr "{0} interface"
 
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:173
-msgid "<html><font color=\"#FF0000\"><b>Warning!</b><br>Your hardware does not meet minimum requirements. This system may not function properly.<br>You may continue installation, but it is recommended that you upgrade your system hardware.<br><br>Press the Next button in the main window to continue.</font></html>"
-msgstr "<html><font color=\"#FF0000\"><b>Aviso!</b><br>Seu hardware não cumpre os requisitos mínimos. Este sistema pode não funcionar adequadamente.<br>Você pode continuar a instalação, mas recomenda-se que atualize o hardware de sistema.<br><br>Pressione o botão Próximo na janela principal para continuar.</font></html>"
+msgid ""
+"<html><font color=\"#FF0000\"><b>Warning!</b><br>Your hardware does not meet "
+"minimum requirements. This system may not function properly.<br>You may "
+"continue installation, but it is recommended that you upgrade your system "
+"hardware.<br><br>Press the Next button in the main window to continue.</"
+"font></html>"
+msgstr ""
+"<html><font color=\"#FF0000\"><b>Aviso!</b><br>Seu hardware não cumpre os "
+"requisitos mínimos. Este sistema pode não funcionar adequadamente.<br>Você "
+"pode continuar a instalação, mas recomenda-se que atualize o hardware de "
+"sistema.<br><br>Pressione o botão Próximo na janela principal para continuar."
+"</font></html>"
 
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:178
-msgid "<html><font color=\"#FF9B00\"><b>Warning!</b><br>Your hardware meets minimum requirements, but performance may not be optimal.<br>Press the Next button in the main window to continue.</font></html>"
-msgstr "<html><font color=\"#FF9B00\"><b>Aviso!</b><br>Seu hardware cumpre os requisitos mínimos, mas o desempenho pode não ser ótimo.<br>Pressione o botão Próximo na janela principal para continuar.</font></html>"
+msgid ""
+"<html><font color=\"#FF9B00\"><b>Warning!</b><br>Your hardware meets minimum "
+"requirements, but performance may not be optimal.<br>Press the Next button "
+"in the main window to continue.</font></html>"
+msgstr ""
+"<html><font color=\"#FF9B00\"><b>Aviso!</b><br>Seu hardware cumpre os "
+"requisitos mínimos, mas o desempenho pode não ser ótimo.<br>Pressione o "
+"botão Próximo na janela principal para continuar.</font></html>"
 
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:182
-msgid "<html><font color=\"#445BFF\"><b>Success!</b><br>Your hardware meets all requirements.<br>Press the Next button in the main window to continue.</font></html>"
-msgstr "<html><font color=\"#445BFF\"><b>Sucesso!</b><br>Seu hardware cumpre todos os requisitos.<br>Pressione o botão Próximo na janela principal para continuar.</font></html>"
+msgid ""
+"<html><font color=\"#445BFF\"><b>Success!</b><br>Your hardware meets all "
+"requirements.<br>Press the Next button in the main window to continue.</"
+"font></html>"
+msgstr ""
+"<html><font color=\"#445BFF\"><b>Sucesso!</b><br>Seu hardware cumpre todos "
+"os requisitos.<br>Pressione o botão Próximo na janela principal para "
+"continuar.</font></html>"
 
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:185
 #: ../api/com/untangle/gui/install/InstallBenchmarkJPanel.java:186
@@ -159,16 +189,28 @@ msgstr "Falha {0}"
 
 #: ../api/com/untangle/gui/install/InstallDiskJPanel.java:68
 #: ../api/com/untangle/gui/install/InstallDiskJPanel.java:173
-msgid "<html>This list shows the boot disks that were found.  <font color='#FF0000'>Please choose a disk for installation.  Warning, all the data on the boot disk you select will be deleted.</font></html>"
-msgstr "<html>Este lista mostra os discos de inicialização que foram encontrados.  <font color='#FF0000'>Escolha um disco para instalação. Aviso, serão excluídos todos os dados no disco de inicialização que selecionar.</font></html>"
+msgid ""
+"<html>This list shows the boot disks that were found.  <font "
+"color='#FF0000'>Please choose a disk for installation.  Warning, all the "
+"data on the boot disk you select will be deleted.</font></html>"
+msgstr ""
+"<html>Este lista mostra os discos de inicialização que foram encontrados.  "
+"<font color='#FF0000'>Escolha um disco para instalação. Aviso, serão "
+"excluídos todos os dados no disco de inicialização que selecionar.</font></"
+"html>"
 
 #: ../api/com/untangle/gui/install/InstallDiskJPanel.java:76
 msgid "Error scanning disks"
 msgstr "Erro ao varrer os discos"
 
+#: ../api/com/untangle/gui/install/InstallDiskJPanel.java:90
+msgid "size"
+msgstr ""
+
 #: ../api/com/untangle/gui/install/InstallDiskJPanel.java:114
 msgid "You must select a boot disk which you would like to install onto."
-msgstr "Você deve selecionar um disco de inicialização onde gostaria de instalar."
+msgstr ""
+"Você deve selecionar um disco de inicialização onde gostaria de instalar."
 
 #: ../api/com/untangle/gui/install/InstallDiskJPanel.java:115
 msgid "Installation Wizard Message"
@@ -188,8 +230,12 @@ msgid "License Agreement"
 msgstr "Contrato de Licença"
 
 #: ../api/com/untangle/gui/install/InstallWarningJPanel.java:56
-msgid "Your selected disk will be erased if you continue installation. Would you like to continue?"
-msgstr "Seu disco selecionado será apagado se continuar a instalação. Deseja continuar?"
+msgid ""
+"Your selected disk will be erased if you continue installation. Would you "
+"like to continue?"
+msgstr ""
+"Seu disco selecionado será apagado se continuar a instalação. Deseja "
+"continuar?"
 
 #: ../api/com/untangle/gui/install/InstallWarningJPanel.java:57
 #: ../api/com/untangle/gui/install/InstallWizard.java:109
@@ -211,35 +257,51 @@ msgstr "Aviso!"
 
 #: ../api/com/untangle/gui/install/InstallWarningJPanel.java:71
 #: ../api/com/untangle/gui/install/InstallWarningJPanel.java:106
-msgid "If you continue, in preparation for the installation process, YOUR DISK WILL BE ERASED AND ALL ITS DATA WILL BE LOST!"
-msgstr "Se você continuar, em preparação para o processo de instalação, SEU DISCO SERÁ APAGADO E TODOS SEUS DADOS SERÃO PERDIDOS!"
+msgid ""
+"If you continue, in preparation for the installation process, YOUR DISK WILL "
+"BE ERASED AND ALL ITS DATA WILL BE LOST!"
+msgstr ""
+"Se você continuar, em preparação para o processo de instalação, SEU DISCO "
+"SERÁ APAGADO E TODOS SEUS DADOS SERÃO PERDIDOS!"
 
 #: ../api/com/untangle/gui/install/InstallWarningJPanel.java:72
 #: ../api/com/untangle/gui/install/InstallWarningJPanel.java:116
-msgid "If you would not like to continue, press the Close Window button.  Otherwise, press the Finish button."
-msgstr "Se não quiser continuar, pressione o botão 'Fechar janela'. Caso contrário, pressione o botão Terminar."
+msgid ""
+"If you would not like to continue, press the Close Window button.  "
+"Otherwise, press the Finish button."
+msgstr ""
+"Se não quiser continuar, pressione o botão 'Fechar janela'. Caso contrário, "
+"pressione o botão Terminar."
 
-#: ../api/com/untangle/gui/install/InstallWelcomeJPanel.java:91
+#: ../api/com/untangle/gui/install/InstallWelcomeJPanel.java:89
 msgid "<html>Welcome to the<br> Installation Wizard!</html>"
 msgstr "<html>Bem-vindo ao<br> Assistente de Instalação!</html>"
 
-#: ../api/com/untangle/gui/install/InstallWelcomeJPanel.java:92
-#: ../api/com/untangle/gui/install/InstallWelcomeJPanel.java:126
-msgid "<html>This wizard will take you step-by-step through<br> the CD installation process.</html>"
-msgstr "<html>Este assistente o guiará passo a passo pelo<br> processo de instalação do CD.</html>"
+#: ../api/com/untangle/gui/install/InstallWelcomeJPanel.java:90
+#: ../api/com/untangle/gui/install/InstallWelcomeJPanel.java:124
+msgid ""
+"<html>This wizard will take you step-by-step through<br> the CD installation "
+"process.</html>"
+msgstr ""
+"<html>Este assistente o guiará passo a passo pelo<br> processo de instalação "
+"do CD.</html>"
 
-#: ../api/com/untangle/gui/install/InstallWelcomeJPanel.java:93
-#: ../api/com/untangle/gui/install/InstallWelcomeJPanel.java:137
+#: ../api/com/untangle/gui/install/InstallWelcomeJPanel.java:91
+#: ../api/com/untangle/gui/install/InstallWelcomeJPanel.java:135
 msgid "Language:"
 msgstr "Idioma:"
 
-#: ../api/com/untangle/gui/install/InstallWelcomeJPanel.java:116
+#: ../api/com/untangle/gui/install/InstallWelcomeJPanel.java:114
 msgid "<html>Welcome to the<br>Installation Wizard!</html>"
 msgstr "<html>Bem-vindo ao<br>Assistente de Instalação!</html>"
 
 #: ../api/com/untangle/gui/install/InstallWizard.java:108
-msgid "If you exit now, you will not be able to continue installation. You should continue, if possible."
-msgstr "Se você sair agora, você não conseguirá continuar a instalação. Você deve continuar, se possível."
+msgid ""
+"If you exit now, you will not be able to continue installation. You should "
+"continue, if possible."
+msgstr ""
+"Se você sair agora, você não conseguirá continuar a instalação. Você deve "
+"continuar, se possível."
 
 #: ../api/com/untangle/gui/install/InstallWizard.java:111
 msgid "<html><b>Exit</b> Wizard</html>"
@@ -275,7 +337,7 @@ msgstr "Confirmar reinício..."
 
 #: ../api/com/untangle/gui/widgets/dialogs/MOneButtonJDialog.java:181
 #: ../api/com/untangle/gui/widgets/wizard/MWizardJDialog.java:122
-#: ../api/com/untangle/gui/widgets/wizard/MWizardJDialog.java:356
+#: ../api/com/untangle/gui/widgets/wizard/MWizardJDialog.java:357
 msgid "Close"
 msgstr "Fechar"
 
@@ -292,17 +354,18 @@ msgid "Continue"
 msgstr "Continuar"
 
 #: ../api/com/untangle/gui/widgets/wizard/MWizardJDialog.java:121
-#: ../api/com/untangle/gui/widgets/wizard/MWizardJDialog.java:338
+#: ../api/com/untangle/gui/widgets/wizard/MWizardJDialog.java:339
 msgid "Previous"
 msgstr "Anterior"
 
-#: ../api/com/untangle/gui/widgets/wizard/MWizardJDialog.java:182
-#: ../api/com/untangle/gui/widgets/wizard/MWizardJDialog.java:188
-#: ../api/com/untangle/gui/widgets/wizard/MWizardJDialog.java:319
+#: ../api/com/untangle/gui/widgets/wizard/MWizardJDialog.java:123
+#: ../api/com/untangle/gui/widgets/wizard/MWizardJDialog.java:183
+#: ../api/com/untangle/gui/widgets/wizard/MWizardJDialog.java:189
+#: ../api/com/untangle/gui/widgets/wizard/MWizardJDialog.java:320
 msgid "Next"
 msgstr "Próximo"
 
-#: ../api/com/untangle/gui/widgets/wizard/MWizardJDialog.java:195
+#: ../api/com/untangle/gui/widgets/wizard/MWizardJDialog.java:196
 msgid "Finish"
 msgstr "Terminar"
 
@@ -310,4 +373,3 @@ msgstr "Terminar"
 #: ../api/com/untangle/gui/util/InfiniteProgressJComponent.java:206
 msgid "Error sleeping"
 msgstr "Erro em espera"
-
